# NQRust-MicroVM

./: .env.example  .gitignore  .gitmodules  AGENTS.md  AVAILABLE_IMAGES.md  BRIDGED_NETWORK_SETUP.md  CHANGELOG.md  CI_CD_OPTIMIZATION.md  CLAUDE.md  CONTAINER.md  CURRENT_STATE.md  Cargo.toml  DEV_SETUP.md  DRIVE_MANAGEMENT.md  EULA Bahasa.md  EVALUATION.md  FEATURES.md  FEATURES_DOCUMENTATION.md  FRONTEND_SPECS.md  FUNCTIONS.md  GUEST_AGENT_AUTO_DEPLOYMENT.md  GUEST_AGENT_COMPLETE.md  GUEST_AGENT_SETUP.md  INSTALLER_TESTING.md  LAMBDA_API.md  LAMBDA_SETUP.md  METRICS_DEBUG.md  NETWORKING.md  NETWORK_BRIDGING_PLAN.md  PERFORMANCE_OPTIMIZATION.md  PRD.md  QA.md  README.md  RELEASE.md  RUN.md  SETTINGS_FIX_SUMMARY.md  SETTINGS_IMPLEMENTATION.md  SETUP.md  SETUP_GUIDE.md  TEMPLATES.md  (+18 more)
.cargo/: audit.toml
apps/agent/: Cargo.toml
apps/agent/src/: main.rs
apps/agent/src/core/: mod.rs  net.rs  systemd.rs  uds_proxy.rs
apps/agent/src/features/: mod.rs  raft_block.rs  vmm_routes.rs
apps/agent/src/features/health/: mod.rs
apps/agent/src/features/inventory/: mod.rs
apps/agent/src/features/networks/: mod.rs
apps/agent/src/features/storage/: backup.rs  iscsi.rs  iscsi_lvm.rs  local_file.rs  mod.rs  nfs.rs  raft_spdk.rs  registry.rs  routes.rs  s3.rs  smb.rs  spdk_lvol.rs  spdk_replica_store.rs
apps/agent/src/features/tap/: mod.rs
apps/agent/src/features/vm/: balloon.rs  entropy.rs  exec.rs  metrics.rs  mmds.rs  mod.rs  port_forward.rs  proxy.rs  serial.rs  shell.rs  snapshot.rs  spawn.rs  stop.rs  system.rs  vsock.rs
apps/agent/src/vmm/: firecracker.rs  mod.rs  qemu.rs  qmp.rs  resource.rs
apps/agent/tests/: qemu_smoke.rs
apps/guest-agent/: Cargo.toml  README.md
apps/guest-agent/src/: main.rs
apps/installer/: Cargo.toml
apps/installer/src/: app.rs  main.rs  theme.rs
apps/installer/src/installer/: build.rs  config.rs  database.rs  deps.rs  disk.rs  executor.rs  kvm.rs  mod.rs  network.rs  preflight.rs  services.rs  verify.rs
apps/installer/src/ui/: mod.rs
apps/installer/src/ui/screens/: complete.rs  config.rs  disk_config.rs  disk_progress.rs  disk_select.rs  error.rs  install_type_select.rs  mod.rs  mode_select.rs  network_config.rs  preflight.rs  progress.rs  verify.rs  welcome.rs
apps/installer/src/ui/widgets/: checklist.rs  log_viewer.rs  mod.rs  phase_progress.rs  status_bar.rs
apps/manager/: Cargo.toml
apps/manager/migrations/: 0001_init.sql  0002_hosts.sql  0003_vm_spec.sql  0004_templates.sql  0005_images.sql  0006_snapshots.sql  0007_vm_devices.sql  0008_snapshot_extensions.sql  0009_vm_drive_size.sql  0010_vm_shell.sql  0011_guest_ip.sql  0012_functions.sql  0013_containers.sql  0014_vm_tags.sql  0015_host_metrics.sql  0016_networks.sql  0017_volumes.sql  0018_users.sql  0019_nic_assigned_ip.sql  0020_rbac_permissions.sql  0021_resource_ownership.sql  0022_user_preferences.sql  0023_audit_schema.sql  0023_runtime_snapshots.sql  0024_metrics_schema.sql  0025_port_forwards.sql  0026_network_provisioning.sql  0027_vxlan_networks.sql  0028_network_uplink_interface.sql  0029_eula_acceptance.sql  0030_license.sql  0031_app_eula.sql  0032_sso_providers.sql  0033_users_password_optional.sql  0034_storage_backends.sql  0035_host_backend_kinds.sql  0036_backup.sql  0037_raft_repair_queue.sql  0037_storage_backend_source.sql  0038_iscsi_lvm_backend.sql  (+7 more)
apps/manager/openapi/manager/: openapi.yaml
apps/manager/src/: docs.rs  main.rs
apps/manager/src/core/: db.rs  mod.rs
apps/manager/src/features/: mod.rs
apps/manager/src/features/backup_targets/: envelope.rs  mod.rs  repo.rs  routes.rs
apps/manager/src/features/backups/: gc.rs  index_rebuild.rs  mod.rs  reconciler.rs  repo.rs  routes.rs  scheduler.rs  service.rs  types.rs
apps/manager/src/features/containers/: docker.rs  mod.rs  port_forward.rs  repo.rs  routes.rs  service.rs  vm.rs
apps/manager/src/features/functions/: mod.rs  repo.rs  routes.rs  service.rs  snapshots.rs  vm.rs
apps/manager/src/features/hosts/: mod.rs  repo.rs  routes.rs
apps/manager/src/features/images/: dockerhub.rs  mod.rs  preload.rs  repo.rs  routes.rs  scan.rs  upload.rs
apps/manager/src/features/licensing/: device.rs  license_service.rs  mod.rs  repo.rs  routes.rs  service.rs
apps/manager/src/features/logs/: mod.rs
apps/manager/src/features/metrics/: collector.rs  mod.rs  repo.rs  routes.rs
apps/manager/src/features/networks/: mod.rs  repo.rs  routes.rs  service.rs
apps/manager/src/features/reconciler/: mod.rs
apps/manager/src/features/runtime_snapshots/: builder.rs  mod.rs  repo.rs  routes.rs  service.rs
apps/manager/src/features/snapshots/: mod.rs  repo.rs  routes.rs
apps/manager/src/features/sso/: crypto.rs  mod.rs  oidc.rs  provisioning.rs  repo.rs  routes.rs  saml.rs
apps/manager/src/features/storage/: agent_rpc.rs  config.rs  mod.rs  registry.rs  rootfs_allocator.rs
apps/manager/src/features/storage_backends/: auto_reconciler.rs  discovery.rs  executor.rs  health.rs  initialize.rs  mod.rs  planner.rs  reconciler.rs  repo.rs  routes.rs
apps/manager/src/features/templates/: mod.rs  repo.rs  routes.rs
apps/manager/src/features/users/: audit.rs  authz.rs  middleware.rs  mod.rs  repo.rs  routes.rs
apps/manager/src/features/vms/: fast_provisioning.rs  guest_agent.rs  mod.rs  qemu_service.rs  repo.rs  routes.rs  service.rs  shell.rs
apps/manager/src/features/volumes/: mod.rs  repo.rs  routes.rs
apps/raftblk-vhost/: Cargo.toml
apps/raftblk-vhost/src/: main.rs
crates/nexus-backup/: Cargo.toml
crates/nexus-backup/src/: chunker.rs  cipher.rs  error.rs  lib.rs  manifest.rs
crates/nexus-raft-block/: Cargo.toml
crates/nexus-raft-block/src/: lib.rs
crates/nexus-storage/: Cargo.toml
crates/nexus-storage/src/: control_plane.rs  error.rs  handle.rs  host.rs  lib.rs  raft_spdk.rs  spdk.rs  types.rs
crates/nexus-vmm/: Cargo.toml
crates/nexus-vmm/src/: lib.rs
crates/nqvm-cli/: Cargo.toml  README.md
crates/nqvm-cli/src/: client.rs  config.rs  main.rs  output.rs  shell.rs
crates/raftblk-vhost/: Cargo.toml
crates/raftblk-vhost/src/: backend.rs  daemon.rs  lib.rs  request.rs
(+556 files in other folders)
