[workspace]
members = [
"apps/agent", "apps/guest-agent",
"apps/manager",
"apps/installer",
"crates/nexus-types",
]
resolver = "2"


[workspace.package]
edition = "2021"


[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
axum = { version = "0.7", features = ["json", "macros", "tokio", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
bytes = "1"
num_cpus = "1"
metrics = "0.21"
utoipa = "4"
futures = "0.3"
tokio-tungstenite = "0.21"
sha2 = "0.10"
