[package]
name = "agent"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
num_cpus = { workspace = true }
urlencoding = { workspace = true }
hyper = { version = "1", features = ["client", "http1"] }
hyperlocal = "0.9"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["client", "http1", "tokio"] }
nexus-types = { path = "../../crates/nexus-types" }
reqwest = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
