[package]
name = "agent"
version = "0.5.0-alpha.6"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
num_cpus = { workspace = true }
urlencoding = { workspace = true }
hyper = { version = "1", features = ["client", "http1"] }
hyperlocal = "0.9"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["client", "http1", "tokio"] }
nexus-types = { path = "../../crates/nexus-types" }
nexus-storage = { path = "../../crates/nexus-storage" }
nexus-vmm = { path = "../../crates/nexus-vmm" }
async-trait = "0.1"
reqwest = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
libc = "0.2"
nexus-backup = { path = "../../crates/nexus-backup" }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls", "rt-tokio"] }
aws-credential-types = "1"
aws-config = { version = "1", default-features = false, features = ["rustls", "rt-tokio"] }
aws-types = "1"
hex = "0.4"
blake3 = "1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
