[package]
name = "manager"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "migrate"] }
chrono = { workspace = true }
uuid = { workspace = true }
urlencoding = { workspace = true }
nexus-types = { path = "../../crates/nexus-types" }

[dev-dependencies]
wiremock = "0.6"