[package]
name = "manager"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "migrate"] }
chrono = { workspace = true }
uuid = { workspace = true }
urlencoding = { workspace = true }
metrics = { workspace = true }
nexus-types = { path = "../../crates/nexus-types" }
utoipa = { workspace = true, features = ["chrono", "uuid"] }
utoipa-axum = "0.1"
utoipa-swagger-ui = { version = "7", features = ["axum"] }
serde_yaml = "0.9"
tower-http = { version = "0.5", features = ["cors"] }
futures = { workspace = true }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
wiremock = "0.6"