[package]
name = "manager"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "migrate", "json"] }
chrono = { workspace = true }
uuid = { workspace = true }
urlencoding = { workspace = true }
base64 = "0.22"
bollard = "0.17"
metrics = { workspace = true }
nexus-types = { path = "../../crates/nexus-types" }
utoipa = { workspace = true, features = ["chrono", "uuid"] }
utoipa-axum = "0.1"
utoipa-swagger-ui = { version = "7", features = ["axum"] }
serde_yaml = "0.9"
tower-http = { version = "0.5", features = ["cors"] }
futures = { workspace = true }
tokio-tungstenite = { workspace = true }
sha2 = { workspace = true }
argon2 = "0.5"
rand = "0.8"
image = "0.24"
tokio-util = { version = "0.7", features = ["io"] }
hostname = "0.4"
hex = "0.4"
dotenvy = "0.15"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
openidconnect = "4"
samael = "0.0.17"
# Force vendored OpenSSL so musl static builds work without system openssl-dev headers.
# samael depends on openssl-sys which otherwise tries to link against the host
# OpenSSL — that fails for the x86_64-unknown-linux-musl target in CI.
openssl = { version = "0.10", features = ["vendored"] }
aes-gcm = "0.10"
url = "2"

[dev-dependencies]
wiremock = "0.6"