[package]
name = "raftblk-vhost-bin"
version = "0.1.0"
edition = "2021"
description = "vhost-user-blk daemon binary that exposes a Raft-replicated block group to a Firecracker guest."

[[bin]]
name = "raftblk-vhost"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
raftblk-vhost = { path = "../../crates/raftblk-vhost" }
# vhost-user / virtio plumbing for the live daemon. These are rust-vmm crates;
# pinned to the tested combination from vhost-user-backend 0.22.0.
vhost = "0.16"
vhost-user-backend = "0.22"
virtio-bindings = "0.2"
virtio-queue = "0.17"
vm-memory = { version = "=0.17.1", features = ["backend-mmap"] }
vmm-sys-util = "0.15"
log = "0.4"
env_logger = "0.11"
