[package]
name = "nexus-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
fastcdc = "3"
zstd = "0.13"
bincode = "1"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
hex = "0.4"
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
proptest = "1"
