[package]
name = "nexus-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
