[package]
name = "nqvm-cli"
version = "0.1.0"
edition.workspace = true
description = "Command-line client for NQR-MicroVM"
authors = ["Nexus"]

[[bin]]
name = "nqvm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crossterm = "0.28"
dirs = "5"
futures = { workspace = true }
nexus-types = { path = "../nexus-types" }
reqwest = { workspace = true }
rpassword = "7"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tabled = "0.16"
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = "0.8"
urlencoding = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mockito = "1"
tempfile = "3"
