[package]
name = "raftblk-vhost"
version = "0.1.0"
edition = "2021"
description = "Raft-replicated block backend exposed via vhost-user-blk to a guest VM."

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
nexus-raft-block = { path = "../nexus-raft-block" }

[dev-dependencies]
tempfile = "3"
